--- a/customer-profile-management/app/src/main/resources/application.yaml
+++ b/customer-profile-management/app/src/main/resources/application.yaml
@@ -19,5 +19,45 @@ spring:
     change-log: classpath:/db/changelog/db.changelog-master.yaml
     enabled: true
 
+  kafka:
+    producer:
+      bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVER:localhost:9092}
+      #bootstrap-servers: ${HOSTNAME:localhost:9092}
+      #      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      #      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      #      acks: all
+      #      acks: 1
+      acks: 0
+      retries: 10
+      properties:
+        max:
+          in:
+            flight:
+              requests:
+                per:
+                  connection: 5
+        enable:
+          idempotence: true
+        linger:
+          ms: 0
+        request:
+          timeout:
+            ms: 3000
+        delivery:
+          timeout:
+            ms: 120000  #TimeoutException
+        retry:
+          backoff:
+            ms:1000
 
+    consumer:
+      bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVER:localhost:9092}
+      #      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      #      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: "*"
+      group-id: customer-events
 
