--- a/customer-profile-management/infrastructure/docker-compose.yml
+++ b/customer-profile-management/infrastructure/docker-compose.yml
@@ -9,8 +9,10 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/vip_bank
       - SPRING_DATASOURCE_USERNAME=banking_user
       - SPRING_DATASOURCE_PASSWORD=password
+      - KAFKA_BOOTSTRAP_SERVER=kafka:9090
     depends_on:
       - db
+      - kafka
     networks:
       - spring-network
 
@@ -22,6 +24,24 @@ services:
       - POSTGRES_DB=vip_bank
       - POSTGRES_USER=banking_user
       - POSTGRES_PASSWORD=password
+    networks:
+      - spring-network
+  kafka:
+    image: bitnami/kafka:latest
+    ports:
+      - "9092:9092"
+    environment:
+      - KAFKA_CFG_NODE_ID=1
+      - KAFKA_KRAFT_CLUSTER_ID=LPWSr2g8Qe-5hdCw6H5TUg
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9091
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9090,CONTROLLER://:9091,EXTERNAL://:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9090,EXTERNAL://localhost:9092
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+    volumes:
+      - /Users/narminhuseynli/kafka/docker-compose/volumes:/bitnami/kafka
     networks:
       - spring-network
 
