--- a/customer-profile-management/app/src/main/resources/application.yaml
+++ b/customer-profile-management/app/src/main/resources/application.yaml
@@ -59,5 +59,9 @@ spring:
           json:
             trusted:
               packages: "*"
-      group-id: customer-events
+#      group-id: customer-events
 
+application:
+  customer:
+    validation:
+      enabled: true
