--- a/customer-profile-management/app/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/customer-profile-management/app/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2,3 +2,6 @@ databaseChangeLog:
   - include:
       file: classpath:/db/changelog/db.changelog-profile.yaml
       relativeToChangelogFile: false
+  - include:
+      file: classpath:/db/changelog/db.changelog-onboarding.yaml
+      relativeToChangelogFile: false
