--- a/customer-profile-management/settings.gradle
+++ b/customer-profile-management/settings.gradle
@@ -2,3 +2,5 @@ rootProject.name = 'customer-profile-management'
 include 'app'
 include 'profile'
 include 'onboarding'
+include 'kyc'
+include 'customer-core'
