--- a/customer-profile-management/kyc/build.gradle
+++ b/customer-profile-management/kyc/build.gradle
@@ -1,9 +1,6 @@
 dependencies {
     implementation project(':customer-core')
-
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-    testImplementation 'org.testcontainers:junit-jupiter'
-    testImplementation 'org.testcontainers:postgresql'
+    implementation 'org.springframework.kafka:spring-kafka'
 }
 
