--- a/customer-profile-management/onboarding/build.gradle
+++ b/customer-profile-management/onboarding/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
+    implementation project(':customer-core')
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.kafka:spring-kafka'
 }
