Add saga pattern, initial phase of outbox

--- a/customer-profile-management/infrastructure/docker-compose.yml
+++ b/customer-profile-management/infrastructure/docker-compose.yml
@@ -24,6 +24,14 @@ services:
       - POSTGRES_DB=vip_bank
       - POSTGRES_USER=banking_user
       - POSTGRES_PASSWORD=password
+    command:
+      - "postgres"
+      - "-c"
+      - "wal_level=logical"
+      - "-c"
+      - "max_replication_slots=1"
+      - "-c"
+      - "max_wal_senders=1"
     networks:
       - spring-network
   kafka:
@@ -44,6 +52,26 @@ services:
       - /Users/narminhuseynli/kafka/docker-compose/volumes:/bitnami/kafka
     networks:
       - spring-network
+
+  debezium:
+    image: debezium/connect:2.7.3.Final
+    ports:
+      - "8083:8083"
+    environment:
+      - BOOTSTRAP_SERVERS=kafka:9090
+      - GROUP_ID=1
+      - CONFIG_STORAGE_TOPIC=connect_configs
+      - OFFSET_STORAGE_TOPIC=connect_offsets
+      - STATUS_STORAGE_TOPIC=connect_statuses
+      - ENABLE_DEBEZIUM_SCRIPTING=true
+      - CONNECT_REST_PORT=8083
+      - CONNECT_REST_ADVERTISED_HOST_NAME=debezium
+    depends_on:
+      - kafka
+      - db
+    networks:
+      - spring-network
+
 
 networks:
   spring-network:
