Add saga pattern - initial phase of outbox -2

--- a/account/app/src/main/resources/application.yaml
+++ b/account/app/src/main/resources/application.yaml
@@ -37,7 +37,13 @@ spring:
           json:
             trusted:
               packages: "*"
-      group-id: customer-events
+      group-id: customer-account-events
 
 server:
   port: 8081
+
+
+application:
+  account:
+    creation:
+      enabled: true
