--- a/customer-profile-management/onboarding/src/main/resources/db/changelog/db.changelog-onboarding.yaml
+++ b/customer-profile-management/onboarding/src/main/resources/db/changelog/db.changelog-onboarding.yaml
@@ -2,3 +2,6 @@ databaseChangeLog:
   - include:
       file: changes/01-onboarding-create-table.yaml
       relativeToChangelogFile: true
+  - include:
+      file: changes/02-outbox-table.yaml
+      relativeToChangelogFile: true
