--- a/account/statement/src/main/resources/application.yaml
+++ b/account/statement/src/main/resources/application.yaml
@@ -1,1 +1,11 @@
+#axon:
+#  eventhandling:
+#    processors:
+#      account-group:
+#        mode: subscribing
+#  axonserver:
+#    servers: localhost:8124
+
+
+
 
