--- a/customer-profile-management/profile/src/main/resources/db/changelog/db.changelog-profile.yaml
+++ b/customer-profile-management/profile/src/main/resources/db/changelog/db.changelog-profile.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: changes/02-insert-initial-data.yaml
       relativeToChangelogFile: true
+  - include:
+      file: changes/04-create-transaction-table.yaml
+      relativeToChangelogFile: true
