--- a/payment/transaction/build.gradle
+++ b/payment/transaction/build.gradle
@@ -1,5 +1,7 @@
 
 dependencies {
-
+    implementation project(':shared')
+    implementation 'org.axonframework:axon-spring-boot-starter:4.10.3'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
